updated projects section

--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -239,86 +239,99 @@
                 <h2>Projects</h2>
             </div>
             <div class="row">
+
+                <!-- Project 1 -->
                 <div class="col-md-4">
                     <div class="info">
                         <div class="img-container3 text-center">
-                            <img class="img-fluid" src="./Images/projects/p1.png"
-                                alt="15th convocation BRAC University">
+                            <img class="img-fluid" src="./Images/projects/p1.png" alt="E-commerce Website">
                         </div>
                         <div>
                             <h4>E-commerce Website</h4>
-                            <p>Using modern technologies like ReactJS</p>
-                            <a class='btn btn-success shadow' href="https://my-ecommerece-website.vercel.app/">Visit
-                                Now</a>
+                            <p>ReactJS, Node.js, MongoDB</p>
+                            <a class="btn btn-success shadow" href="https://my-ecommerece-website.vercel.app/"
+                                target="_blank">Visit Now</a>
                         </div>
                     </div>
                 </div>
+
+                <!-- Project 2 -->
                 <div class="col-md-4">
                     <div class="info">
                         <div class="img-container3 text-center">
-                            <img class="img-fluid" src="./Images/projects/p5.png"
-                                alt="15th convocation BRAC University">
+                            <img class="img-fluid" src="./Images/projects/p5.png" alt="Restaurant App">
                         </div>
                         <div>
-                            <h4>Resturent App</h4>
-                            <p>Using modern technologies like React-Native</p>
-                            <a class='btn btn-success shadow'
-                                href="https://food-delivery-app-omega-two.vercel.app/">Visit Now</a>
+                            <h4>Restaurant App</h4>
+                            <p>React Native, Firebase</p>
+                            <a class="btn btn-success shadow" href="https://food-delivery-app-omega-two.vercel.app/"
+                                target="_blank">Visit Now</a>
                         </div>
                     </div>
                 </div>
+
+                <!-- Project 3 -->
                 <div class="col-md-4">
                     <div class="info">
                         <div class="img-container3 text-center">
-                            <img class="img-fluid" src="./Images/e4.png" alt="15th convocation BRAC University">
-                        </div>
-                        <div>
-                            <h4>Rent a Car App</h4>
-                            <p>Using Golang Docker</p>
-                            <a class='btn btn-success shadow' href="#projects">Visit Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="info">
-                        <div class="img-container3 text-center">
-                            <img class="img-fluid" src="./Images/projects/p2.png"
-                                alt="15th convocation BRAC University">
-                        </div>
-                        <div>
-                            <h4>FinTech</h4>
-                            <p>Using modern technologies like Kotlin JAVA</p>
-                            <a class='btn btn-success shadow' href="#projects">Visit Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="info">
-                        <div class="img-container3 text-center">
-                            <img class="img-fluid" src="./Images/e4.png" alt="15th convocation BRAC University">
+                            <img class="img-fluid" src="./Images/projects/p4.png" alt="Rent a Car App">
                         </div>
                         <div>
                             <h4>Rent a Car App</h4>
-                            <p>Using Golang Docker</p>
-                            <a class='btn btn-success shadow' href="#projects">Visit Now</a>
+                            <p>Golang, Docker, PostgreSQL</p>
+                            <a class="btn btn-success shadow" href="https://tanvir-rent-a-car.vercel.app/"
+                                target="_blank">Visit Now</a>
                         </div>
                     </div>
                 </div>
+
+                <!-- Project 4 -->
                 <div class="col-md-4">
                     <div class="info">
                         <div class="img-container3 text-center">
-                            <img class="img-fluid" src="./Images/e4.png" alt="15th convocation BRAC University">
+                            <img class="img-fluid" src="./Images/projects/p3fintech.png" alt="FinTech App">
                         </div>
                         <div>
-                            <h4>Rent a Car App</h4>
-                            <p>Using Golang Docker</p>
-                            <a class='btn btn-success shadow' href="#projects">Visit Now</a>
+                            <h4>FinTech Mobile App</h4>
+                            <p>Kotlin, Java, Spring Boot</p>
+                            <a class="btn btn-primary shadow" href="#contact">Request Consultaion</a>
                         </div>
                     </div>
                 </div>
+
+                <!-- Project 5 (DevOps) -->
+                <div class="col-md-4">
+                    <div class="info">
+                        <div class="img-container3 text-center">
+                            <img class="img-fluid" src="./Images/projects/p6cicd.png" alt="CI/CD Pipeline">
+                        </div>
+                        <div>
+                            <h4>CI/CD Pipeline Automation</h4>
+                            <p>Jenkins, SonarQube, Docker, Kubernetes</p>
+                            <a class="btn btn-primary shadow" href="#contact">Request Consultaion</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 6 (DevOps) -->
+                <div class="col-md-4">
+                    <div class="info">
+                        <div class="img-container3 text-center">
+                            <img class="img-fluid" src="./Images/projects/p7zabbix.png" alt="Monitoring & Alerting">
+                        </div>
+                        <div>
+                            <h4>Monitoring & Alerting System</h4>
+                            <p>Zabbix, Grafana, Prometheus</p>
+                            <a class="btn btn-primary shadow" href="#contact">Request
+                                Consultaion</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
+
 
 
     <!-- Skills section -->
