added some certifications

--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -425,7 +425,7 @@
                 <div class="col-md-4">
                     <div class="info">
                         <img class="img-container2" src="./Images/certificates/cr-2.jpg" alt="Great Learning">
-                        <h4 class="certi-title">Intro to Digital Marketing</h4>
+                        <h4 class="certi-title">Digital Marketing</h4>
                         <h5>Organization: Great Learning </h5>
                     </div>
                 </div>
@@ -434,6 +434,41 @@
                         <img class="img-container2" src="./Images/certificates/cr-6.jpg" alt="">
                         <h4 class="certi-title">Excel </h4>
                         <h5>Organization: Macquarie University by Coursera </h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="info">
+                        <img class="img-container2" src="./Images/certificates/arced.jfif" alt="">
+                        <h4 class="certi-title">JAVA Based Programming </h4>
+                        <h5>Organization: ARCED Foundation </h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="info">
+                        <img class="img-container2" src="./Images/certificates/creativeit.jfif" alt="">
+                        <h4 class="certi-title">Web Development Training</h4>
+                        <h5>Organization: Creative IT Institute</h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="info">
+                        <img class="img-container2" src="./Images/certificates/blockchain.jpg" alt="">
+                        <h4 class="certi-title">Blockchain Basics </h4>
+                        <h5>Organization: Great Learning </h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="info">
+                        <img class="img-container2" src="./Images/certificates/ieee.jfif" alt="">
+                        <h4 class="certi-title">React JS </h4>
+                        <h5>Organization: IEEE Computer Society, BRACU </h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="info">
+                        <img class="img-container2" src="./Images/certificates/BTEB.jfif" alt="">
+                        <h4 class="certi-title">Computer Office Application Training A+</h4>
+                        <h5>Organization: Bangladesh Technical Education Board, Dhaka</h5>
                     </div>
                 </div>
             </div>
