updated some style

--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -86,7 +86,7 @@
                 </div>
 
                 <!-- Right Image -->
-                <div class="col-lg-6 text-center text-lg-end fade-right">
+                <div class="col-lg-6 text-center text-lg-end fade-right px-4">
                     <div class="img-container">
                         <img class="img-fluid rounded" src="./Images/tanvir6.png" alt="Profile Picture">
                     </div>
